# trt_wrapper

./: .gitignore  CMakeLists.txt  export.txt  readme.md
include/object_detect/: infer_2dod.h
include/trt_wrapper/: preprocess_cuda.h  trt_infer_api.h
src/object_detect/: infer_2dod.cpp
src/trt_wrapper/: preprocess_cuda.cu  trt_infer_api.cpp
test/: test_2dod.cpp
